templates/kong-ingress/ingress-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-manager
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: kong-manager.home-network.sort-tree.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kong-kong-manager
            port:
              number: 8002
